# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/pt-BR/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/spec/v2.0.0.html).

## [4.0.1] - 2022-03-14

### Added

- Quatro novos designs do Relkhin (853341889016365097). Perfis `iD03` e `Um Propósito Sem Alma`, fundo de carta `Lamenta Caelorum` e Mesa de Cartas `Partida Atemporal`.
- Status de Roleta `/status roleta`
- **Sistema de PvP:** Usuários podem batalhar em uma batalha justa, ou desnivelada, depende do invocador do comando. Batalhas justas são alinhadas com TODOS os jogadores nível **10**, com todas habilidades da classe desbloqueadas no nível 2. NOVOS COMANDOS:
  - `/arena configurar` - Configura suas bênçãos para uma batalha justa. (Você pode resetar os pontos a qualquer momento)
  - `/arena batalhar` - Chama um jogador para 1x1. Nada vale aqui, os valores de vida e mana serão todos resetados, e ninguém perderá vida fora da Arena.
- Comandos de ação agora aceitam motivos. Diga para a Menhera o porquê de tu estar tomando aquela ação, e ela mostrará pra todos isso
- O cooldown da dungeon agora aparece no `/cooldowns`
- Novos comandos para imagens de usuários:
  - `/user banner` Mostra o banner de um usuário (se ele tiver)
  - `/user avatar` Mostra o avatar de um usuário (pode ser o avatar customizado de servidor)
- A Roleta agora tem um limite de apostas altas. Você só pode fazer 5 apostas altas em `Número Único` e `Dupla de Números` por hora. São consideiradas apostas altas àquelas maiores de 10000 estrelinhas.
- Os retornos das apostas agora são reduzidos por impostos. Quanto maior seu retorno, maiores os impostos (governo é ladrão, fazer o que).
- Botao com Link para o servidor de suporte e o site da Menhera no `/status menhera`
- Adicionado a quantidade de bênçãos à ficha no início do comando
- Novos comandos de reset: