@@ -449,6 +449,10 @@
     "designer": {
       "no-designer": "This user does't own any designs",
       "title": "{{user}}'s Designs",
+      "notify": "Notify Purchases",
+      "success": "Your purchase notification settings have changed!",
+      "dont-notify": "Do Not Notify Purchases",
+      "notify-footer": "With notify purchases active, every time a user buys a design from you, Menhera will try to send a message in your DM showing this",
       "description": "**Type:** $t(common:theme_types.{{type}}) ($t(common:rarities.{{rarity}}))\n**Royalty:**: {{royalty}}%\n**Profit:** {{profit}} :star:\n**Sold:** {{sold}}\nRegistered at `{{registered}}`"
     },
     "coinflip": {
